# api/docs/swagger.json
@@ -1,13 +1,16 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "Пример API с Gin и Swagger",
-        "title": "Example API",
-        "termsOfService": "http://swagger.io/terms/",
+        "description": "This is a sample Gin server.",
+        "title": "My App API",
+        "termsOfService": "http://example.com/terms/",
         "contact": {
             "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "url": "http://example.com/support",
+            "email": "support@example.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -18,9 +21,8 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/example/helloworld": {
+        "/events": {
             "get": {
-                "description": "do ping",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,16 +30,54 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Events"
                 ],
-                "summary": "ping example",
+                "summary": "Get Events",
+                "parameters": [
+                    {
+                        "enum": [
+                            "past",
+                            "present",
+                            "future"
+                        ],
+                        "type": "string",
+                        "description": "Filter events by date",
+                        "name": "filter",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Event.Event"
+                            }
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Event.Event": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "endDate": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "startDate": {
+                    "type": "string"
                 }
             }
         }
